# ue-commander

./: .gitignore  README.md  pyproject.toml
.omc/state/: hud-state.json  hud-stdin-cache.json
tests/: test_blueprint_protocol.py  test_mcp_quality.py
ue_commander/: __init__.py  __main__.py  cli_compile.py  config.py  scene_sdf.py  server.py  ue_build.py  ue_build_session.py  ue_debug.py  ue_discover.py  ue_editor.py  ue_launch_session.py  ue_process.py
ue_commander/bridge/: __init__.py  capability_registry.py  plugin_bridge.py
ue_commander/models/: __init__.py  capability.py  state.py
