[project]
name = "ue-commander"
version = "0.1.0"
description = "MCP server for safely launching, closing, and compiling Unreal Engine projects"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "psutil>=5.9.0",
]

[project.scripts]
ue-commander = "ue_commander.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ue_commander"]
